--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ body, html {height: 100%}
     Word!
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Hello World</h1>
+    <h1 class="w3-jumbo w3-animate-top">Hair</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Goodbye World</p>
+    <p class="w3-large w3-center">By Adrianna</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="" target="">...</a>
