--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center">By Adrianna</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="" target="">...</a>
+    More... <a href="" target="https://www.instagram.com/hairnosis/">@hairnosis</a>
   </div>
 </div>
 
