--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body, html {height: 100%}
     More...<a href="https://www.instagram.com/hairnosis/" target="_blank">@hairnosis</a>
   </div>
   <div class="w3-display-bottomright w3-padding-large">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3061.4110119852157!2d-105.07845858469369!3d39.887429195583564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b89807fea2189%3A0x443fd92ee3d11111!2sAveda!5e0!3m2!1sen!2sus!4v1680359659659!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    BottomRight
   </div>
  </div>
 
